# lightfield-compression-mgr

./: CMakeLists.txt  main.cpp
src/: lightfield_compressor.hpp  lossless_compressor.hpp  regular_compressor.hpp
src/block_matchers/: block_matcher.hpp  block_matcher_factory.hpp  block_matcher_heuristic.hpp  block_matcher_results.hpp  bm_factory_hillclimbing.hpp  bm_factory_linear_preference.hpp  bm_factory_perimiter_search.hpp  bm_factory_random_search.hpp  bm_factory_simulated_annealing.hpp  bm_factory_stochastic_descend.hpp  bm_factory_test_zone_search.hpp  bm_hillclimbing.hpp  bm_hillclimbing_variable_neighbourhood.hpp  bm_linear_preference.hpp  bm_perimiter_search.hpp  bm_perimiter_search_with_cutoff.hpp  bm_random_search.hpp  bm_simulated_annealing.hpp  bm_stochastic_descend.hpp  bm_test_zone_search.hpp  start_mv_predictor.hpp
src/encoders/: arithmetic_encoder.hpp  encoder.hpp  huffman_encoder.hpp  run_length_encoder.hpp
src/filters/: average_filter.hpp  filter.hpp  filtering_results_encoder.hpp  jpeg_filters.hpp  median_edge_predictor.hpp  paeth_filter.hpp  per_row_predictor.hpp  shift_vector_filter.hpp
src/lightfield_model/: compression_cost_model.hpp  lightfield_image.hpp  lightfield_model.hpp
src/not_important/: curiosities.hpp
src/parameter_adjuster/: reference_image_picker.hpp  reference_images_scheme_predictor.hpp  test_compressor.hpp  test_disparity_predictor.hpp
src/partitioners/: fixed_size_square_partitioner.hpp  partitioner.hpp  partitions_model.hpp  variable_size_square_bottom_up_partitioner.hpp  variable_size_square_partitioner.hpp
(+19 files in other folders)
